--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,14 +40,17 @@ services:
     restart: unless-stopped
     networks:
       - cloudflared
+    ports:
+      - '9091:9091'
     environment:
+      PUID: 1000
+      PGID: 1000
       AUTHELIA_IDENTITY_VALIDATION_RESET_PASSWORD_JWT_SECRET_FILE: /secrets/JWT_SECRET
       AUTHELIA_SESSION_SECRET_FILE: /secrets/SESSION_SECRET
-      AUTHELIA_STORAGE_POSTGRES_PASSWORD_FILE: /secrets/STORAGE_PASSWORD
       AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE: /secrets/STORAGE_ENCRYPTION_KEY
-      AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE: /secrets/AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE
+      AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE: /secrets/NOTIFIER_SMTP_PASSWORD
 
     volumes:
-      - ./appdata/authelia/config:/config'
+      - ./appdata/authelia/config:/config
       - ./appdata/authelia/secrets:/secrets
       - ./appdata/authelia/db:/db
