rm cf token from traefik

--- a/appdata/traefik/config.yml
+++ b/appdata/traefik/config.yml
@@ -354,7 +354,7 @@ http:
     authelia:
       loadBalancer:
         servers:
-          - url: "http://42.42.20.2:9091"
+          - url: "http://authelia:9091"
 
     vaultwarden:
       loadBalancer:
