--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,8 +69,22 @@ services:
       AUTHELIA_SESSION_SECRET_FILE: /secrets/SESSION_SECRET
       AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE: /secrets/STORAGE_ENCRYPTION_KEY
       AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE: /secrets/NOTIFIER_SMTP_PASSWORD
-
     volumes:
       - ./appdata/authelia/config:/config
       - ./appdata/authelia/secrets:/secrets
       - ./appdata/authelia/db:/db
+
+  homepage:
+    image: ghcr.io/gethomepage/homepage:latest
+    container_name: homepage
+    networks:
+      - cloudflared
+    ports:
+      - 3000:3000
+    volumes:
+      - ./appdata/homepage:/app/config
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      HOMEPAGE_ALLOWED_HOSTS: home.thehorde.page
+      PUID: 1000
+      PGID: 1000
