--- a/appdata/traefik/traefik.yml
+++ b/appdata/traefik/traefik.yml
@@ -3,38 +3,12 @@ api:
   insecure: true
   debug: true
 entryPoints:
-  traefik:
-    address: ":8080"
-  http:
+  web:
     address: ":80"
-    http:
-      redirections:
-        entryPoint:
-          to: https
-          scheme: https
-          permanent: true
-  https:
-    address: ":443"
-serversTransport:
-  insecureSkipVerify: true
+
 providers:
   docker:
     exposedByDefault: false
   file:
     filename: /config.yml
-certificatesResolvers:
-  myresolver:
-    acme:
-      email: jakubcihanek@gmail.com
-      storage: acme.json
-      httpChallenge:
-          entryPoint: http
-#       caServer: https://acme-v02.api.letsencrypt.org/directory # prod (default)
-#       #caServer: https://acme-staging-v02.api.letsencrypt.org/directory # staging
-#       dnsChallenge:
-#         provider: cloudflare
-#         #disablePropagationCheck: true # uncomment this if you have issues pulling certificates through cloudflare, By setting this flag to true disables the need to wait for the propagation of the TXT record to all authoritative name servers.
-#         #delayBeforeCheck: 60s # uncomment along with disablePropagationCheck if needed to ensure the TXT record is ready before verification is attempted 
-#         resolvers:
-#           - "1.1.1.1:53"
-#           - "1.0.0.1:53"
+    watch: true
