--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       WATCHTOWER_INCLUDE_STOPPED: True
       WATCHTOWER_NOTIFICATIONS: gotify
       WATCHTOWER_NOTIFICATIONS_HOSTNAME: Server
-      WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN_FILE: /run/secrets/gotify_token
+      WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN: /run/secrets/gotify_token
       WATCHTOWER_NOTIFICATION_GOTIFY_URL: http://42.42.20.2:4624
       WATCHTOWER_REVIVE_STOPPED: False
       WATCHTOWER_SCHEDULE: 0 00 05 * * 0
@@ -28,12 +28,13 @@ services:
     container_name: cloudflared
     image: cloudflare/cloudflared
     environment:
-      TUNNEL_TOKEN: >-
-        eyJhIjoiOGNlODA4ZjBhMzM1ODk4MGIzOTBlYTgzMGE4ZGYzYzYiLCJ0IjoiZDExMjA4OTMtYzBhNC00ZjFkLWE5YzUtNTc2ZWU0MTQwNjgxIiwicyI6Ik9EVTVOREUwT0dRdE9XUTNNaTAwTldKa0xUa3hZMk10TVdRNE5qWTJPV05pWlRRNSJ9
+      TUNNEL_TOKEN_FILE: /run/secrets/tunnel_token
       TZ: Europe/Zurich
     networks:
       - cloudflared
     restart: unless-stopped
+    volumes:
+      - ./secrets/cloudflared/tunnel_token:/run/secrets/tunnel_token:ro
 
   traefik:
     container_name: traefik
@@ -41,11 +42,6 @@ services:
     restart: unless-stopped
     networks:
       - cloudflared
-    ports:
-      - '80:80'
-      - '443:443'
-      - '8080:8080'
-
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -77,6 +73,7 @@ services:
   homepage:
     image: ghcr.io/gethomepage/homepage:latest
     container_name: homepage
+    restart: unless-stopped
     networks:
       - cloudflared
     ports:
