remove config files for homepage from ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
 secrets/*
 appdata/*
+
 !appdata/authelia/secrets/*
 !appdata/authelia/secrets/*_sample
 !appdata/authelia/configuration.yml
 !appdata/authelia/user_database.yml
+
 !appdata/traefik/traefik.yml
 !appdata/traefik/config.yml
+
+!appdata/homepage/icons/*
+!appdata/homepage/bookmarks.yaml
+!appdata/homepage/custom.css
+!appdata/homepage/custom.js
+!appdata/homepage/docker.yaml
+!appdata/homepage/kubernetes.yaml
+!appdata/homepage/proxmox.yaml
+!appdata/homepage/services.yaml
+!appdata/homepage/settings.yaml
+!appdata/homepage/widgets.yaml
