--- a/appdata/homepage/services.yaml
+++ b/appdata/homepage/services.yaml
@@ -10,7 +10,7 @@
         widget:
             type: uptimekuma
             url: http://uptime:3001
-            slug: server
+            slug: homepage
 
 - Home Automation:
     - HomeAssistant:
@@ -154,7 +154,7 @@
         href: http://games.thehorde.page/
         description: ROM Management
         icon: romm.png
-        siteMonitor: http://42.42.20.2:3434
+        siteMonitor: http://42.42.20.3:3434
 
     - Torrent:
         href: http://torrent.thehorde.page/
