--- a/appdata/traefik/config.yml
+++ b/appdata/traefik/config.yml
@@ -69,6 +69,12 @@ http:
         - web
       rule: Host(`photos.thehorde.page`)
       service: immich
+    
+    romm:
+      entryPoints:
+        - web
+      rule: Host(`games.thehorde.page`)
+      service: romm
 
   services:
 
@@ -126,6 +132,11 @@ http:
       loadBalancer:
         servers:
           - url: http://42.42.20.3:6868
+
+    romm:
+      loadBalancer:
+        servers:
+          - url: http://42.42.20.3:3434
 
   middlewares:
     force-https-header:
